--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
             </div>
         </div>
     </header>
-
-
     <section class="media">
         <div class="container">
             <div class="row">
@@ -51,11 +49,10 @@
                     <a href="#" class="dl-button">Download as PDF</a>
                 </div>
             </div>
-        </div><!-- end container -->
-    </section> <!-- end media -->
-
-
-
+        </div>
+        <!-- end container -->
+    </section>
+    <!-- end media -->
     <section class="resume">
         <div class="container">
             <section class="resume-block personal-data">
@@ -63,10 +60,11 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-4"><span>Adress:</span></div>
-                    <div class="col-xs-8">Russa. Crimea. Armyansk / Sevastopol (ready to move)</div>
+                    <div class="col-xs-8">Russia. Crimea. Armyansk / Sevastopol (ready to move)</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-4"><span><span>Email:</span></span></div>
+                    <div class="text-right col-xs-4"><span><span>Email:</span></span>
+                    </div>
                     <div class="col-xs-8"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
                 <div class="row">
@@ -85,14 +83,16 @@
                     <div class="text-right col-xs-4"><span>Skype:</span></div>
                     <div class="col-xs-8"><a href="skype:itrefa?call">itrefa</a></div>
                 </div>
-            </section> <!-- end resume-block -->
+            </section>
 
+
+            <!-- end resume-block -->
             <section class="resume-block education">
                 <h2>Education</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Sept 2013 - June 2014</span></div>
-                    <div class="bordered col-xs-9">
+                    <div class="text-right col-xs-4"><span>Sept 2013 - June 2014</span></div>
+                    <div class="bordered col-xs-8">
                         <span>
                             Specialist in Automated Management of Technological Processes.
                         </span>
@@ -100,16 +100,16 @@
                         <p>Kherson National Technical University.</p>
                     </div>
                 </div>
+
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Sept 2010 - June 2013</span></div>
-                    <div class="bordered col-xs-9">
-                    <span>Bachelor in Automated Management of Technological Processes.</span>
-                    <br>
-                    <p>Kherson National Technical University.</p>
+                    <div class="text-right col-xs-4"><span>Sept 2010 - June 2013</span></div>
+                    <div class="bordered col-xs-8">
+                        <span>Bachelor in Automated Management of Technological Processes.</span>
+                        <br>
+                        <p>Kherson National Technical University.</p>
                     </div>
                 </div>
             </section>
-
 
 
             <section class="resume-block about-me">
@@ -117,17 +117,35 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-3"><span>Objective</span></div>
-                    <div class="bordered col-xs-9">Start the carreer as a junior Javascript developer</div>
+                    <div class="bordered col-xs-9">Start the carreer as a junior Javascript developer.</div>
                 </div>
+
                 <div class="row">
                     <div class="text-right col-xs-3"><span>Summary</span></div>
                     <div class="bordered col-xs-9">
-                        Strong knowledge of Javascrip. Understand key principles and technics in software development.Понимаю принципы проектирования и разработки качественного ПО. Всегда стараюсь писать модульный, хорошо читаемый и главное тестируемый код. Знаю силу TDD и стараюсь везде ее применять. Постоянно развиваюсь и учусь, обязательно пробую все ручками. Как я совершенствую свои знания: Читаю много профильной литературы и прохожу курсы, вот <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">ссылка</a> на мою книжную полку. Изучаю код интересных проектов на Github. Прохожу курсы по Computer Science из этого <a href="https://github.com/open-source-society/computer-science" target='_blank'>списка</a>. Так же улучшаю свои математические знания на <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>.
+                        <p>Strong knowledge of Javascript. Understand principles and technics that used to create quality software. I'm always trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects.</p>
+                        <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies and my projects will be further.</p>
+                        <p>Constantly evolving and learning, trying everything on practice. That's how I improve my knowledge :</p>
+
+                        <ul class="study-list">
+                            <li>
+                                <p>I read a lot of specialized books and articles, here is a <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">link</a> to my bookshelf. My favorites are "Code Complete" and "Clean Coder".</p>
+                            </li>
+                            <li>
+                                <p>learn the code of big projects on Github.</p>
+                            </li>
+                            <li>
+                                <p>study Computer Science courses from <a href="https://github.com/open-source-society/computer-science" target='_blank'>this list</a>.</p>
+                            </li>
+                            <li>
+                                <p>
+                                    also learn math on <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
-
-
             <section class="resume-block computer-skills">
                 <h2>Computer skills</h2>
                 <hr>
@@ -136,7 +154,7 @@
                     <div class="col-xs-5 col-sm-7 skill">Javascript, HTML, CSS(SASS)</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Write test with</span></div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Unit-tests</span></div>
                     <div class="col-xs-5 col-sm-7 skill">Jasmine, Mocha</div>
                 </div>
                 <div class="row">
@@ -160,16 +178,14 @@
                     <div class="col-xs-5 col-sm-7 skill">Linux (advanced user)</div>
                 </div>
             </section>
-
             <section class="resume-block">
-                <h2>Examples of my code</h2>
+                <h2>Code examples</h2>
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
                     <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : styles SASS, CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
                 </div>
             </section>
-
             <section class="resume-block languages">
                 <h2>Languages</h2>
                 <hr>
@@ -183,7 +199,6 @@
                 </div>
             </section>
             <!-- end resume-block -->
-
         </div>
         <!-- end container -->
     </section>
