added link to pdf

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- end row -->
             <div class="row">
                 <div class="pdf-button">
-                    <a href="#" class="dl-button">Download as PDF</a>
+                    <a href="https://raw.githubusercontent.com/thohoh/thohoh.github.io/master/Kozlov_Alexander_cv.pdf" target='_blank' class="dl-button">Download as PDF</a>
                 </div>
             </div>
         </div>
