--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-4"><span>Adress:</span></div>
-                    <div class="col-xs-8">Russia. Crimea. Armyansk / Sevastopol (ready to move)</div>
+                    <div class="col-xs-8">Russia. Crimea. Sevastopol (ready to move)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-4"><span><span>Email:</span></span>
