removed google font link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kozlov Alexander | resume</title>
-    <link href='https://fonts.googleapis.com/css?family=Andika&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,6 +28,9 @@
             </div>
         </div>
     </header>
+
+
+
     <section class="media">
         <div class="container">
             <div class="row">
@@ -44,6 +46,8 @@
                 </div>
             </div>
             <!-- end row -->
+
+
             <div class="row">
                 <div class="pdf-button">
                     <a href="https://raw.githubusercontent.com/thohoh/thohoh.github.io/master/Kozlov_Alexander_cv.pdf" target='_blank' class="dl-button">Download as PDF</a>
@@ -51,6 +55,10 @@
             </div>
         </div>
         <!-- end container -->
+
+
+
+
     </section>
     <!-- end media -->
     <section class="resume">
@@ -86,6 +94,7 @@
             </section>
 
 
+
             <!-- end resume-block -->
             <section class="resume-block education">
                 <h2>Education</h2>
@@ -110,6 +119,7 @@
                     </div>
                 </div>
             </section>
+
 
 
             <section class="resume-block about-me">
@@ -146,6 +156,10 @@
                     </div>
                 </div>
             </section>
+
+
+
+
             <section class="resume-block computer-skills">
                 <h2>Computer skills</h2>
                 <hr>
@@ -178,6 +192,10 @@
                     <div class="col-xs-5 col-sm-7 skill">Linux (advanced user)</div>
                 </div>
             </section>
+
+
+
+
             <section class="resume-block">
                 <h2>Code examples</h2>
                 <hr>
@@ -197,14 +215,12 @@
                     <div class="text-right col-xs-6 col-sm-3"><span>Russian</span></div>
                     <div class="col-xs-6 col-sm-9">Native</div>
                 </div>
-            </section>
-            <!-- end resume-block -->
-        </div>
-        <!-- end container -->
-    </section>
-    <!-- end resume -->
+            </section> <!-- end resume-block -->
+        </div> <!-- end container -->
+    </section> <!-- end resume -->
+
     <!-- Scripts go down here -->
-    <!-- Yandex.Metrika counter -->
+
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (d, w, c) {
