--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kozlov Alexander | resume</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -41,7 +42,7 @@
                     <ul class="list-inline media-list">
                         <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
                         <li><a class='twitter-ico' href="https://twitter.com/trefa" target='_blank'><i class="fa fa-twitter"></i></a></li>
-                        <li><a class='email-ico' href="mailto:itrefak@gmail.com"><i class="fa fa-envelope"></i></a></li>
+                        <li><a class='email-ico' href="ru.linkedin.com/in/kozlovtrefak" target='_blank'><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -100,8 +101,8 @@
                 <h2>Education</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-4"><span>Sept 2013 - June 2014</span></div>
-                    <div class="bordered col-xs-8">
+                    <div class="text-right col-xs-3"><span class='education-period'>Sept 2013 - June 2014</span></div>
+                    <div class="bordered col-xs-9">
                         <span>
                             Specialist in Automated Management of Technological Processes.
                         </span>
@@ -111,8 +112,8 @@
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-4"><span>Sept 2010 - June 2013</span></div>
-                    <div class="bordered col-xs-8">
+                    <div class="text-right col-xs-3"><span class='education-period'>Sept 2010 - June 2013</span></div>
+                    <div class="bordered col-xs-9">
                         <span>Bachelor in Automated Management of Technological Processes.</span>
                         <br>
                         <p>Kherson National Technical University.</p>
@@ -126,13 +127,13 @@
                 <h2>About me</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Objective</span></div>
-                    <div class="bordered col-xs-9">Start the carreer as a junior Javascript developer.</div>
+                    <div class="text-right col-xs-3 about-me-header"><span>Objective</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">Start the carreer as a junior Javascript developer.</div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Summary</span></div>
-                    <div class="bordered col-xs-9">
+                    <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
                         <p>Strong knowledge of Javascript. Understand principles and technics that used to create quality software. I'm always trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects.</p>
                         <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies and my projects will be further.</p>
                         <p>Constantly evolving and learning, trying everything on practice. That's how I improve my knowledge :</p>
