--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class="list-inline media-list">
                         <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
                         <li><a class='twitter-ico' href="https://twitter.com/trefa" target='_blank'><i class="fa fa-twitter"></i></a></li>
-                        <li><a class='email-ico' href="ru.linkedin.com/in/kozlovtrefak" target='_blank'><i class="fa fa-linkedin"></i></a></li>
+                        <li><a class='email-ico' href="http://ru.linkedin.com/in/kozlovtrefak" target='_blank'><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
