--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Objective</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">Start the carreer as a junior Javascript developer.</div>
+                    <div class="bordered col-xs-9 about-me-desc">Start the career as a junior Javascript developer.</div>
                 </div>
 
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <p>Strong knowledge of Javascript. Understand principles and technics that used to create quality software. I'm always trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects.</p>
-                        <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies and my projects will be further.</p>
+                        <p>Strong knowledge of Javascript. Understand principles and technics that used to create quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
+                        <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies I worked with and my projects will be further.</p>
                         <p>Constantly evolving and learning, trying everything on practice. That's how I improve my knowledge :</p>
 
                         <ul class="study-list">
