--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>API / Frameworks</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">jQuery, Bootstrap, Chrome APIs</div>
+                    <div class="col-xs-5 col-sm-7 skill">jQuery, Bootstrap, Chrome APIs, (currently practicing AngularJS)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Experience with</span></div>
