--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 
 
+    <!-- SOCIAL LINKS -->
     <section class="media">
         <div class="container">
             <div class="row">
@@ -46,7 +47,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- end row -->
 
 
             <div class="row">
@@ -55,15 +55,17 @@
                 </div>
             </div>
         </div>
-        <!-- end container -->
-
-
-
-
     </section>
-    <!-- end media -->
+
+
+
+
+
     <section class="resume">
         <div class="container">
+
+
+            <!-- PERSONAL DATA -->
             <section class="resume-block personal-data">
                 <h2>Personal data</h2>
                 <hr>
@@ -96,7 +98,9 @@
 
 
 
-            <!-- end resume-block -->
+
+
+            <!-- EDUCATION -->
             <section class="resume-block education">
                 <h2>Education</h2>
                 <hr>
@@ -123,6 +127,8 @@
 
 
 
+
+            <!-- SUMMARY -->
             <section class="resume-block about-me">
                 <h2>About me</h2>
                 <hr>
@@ -161,6 +167,8 @@
 
 
 
+
+            <!-- SKILLS -->
             <section class="resume-block computer-skills">
                 <h2>Computer skills</h2>
                 <hr>
@@ -197,14 +205,23 @@
 
 
 
+
+            <!-- CODE EXAMPLES -->
             <section class="resume-block">
                 <h2>Code examples</h2>
                 <hr>
+
                 <div class="row">
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
                     <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : styles SASS, CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
                 </div>
+
             </section>
+
+
+
+
+
             <section class="resume-block languages">
                 <h2>Languages</h2>
                 <hr>
@@ -220,7 +237,8 @@
         </div> <!-- end container -->
     </section> <!-- end resume -->
 
-    <!-- Scripts go down here -->
+
+    <!-- Scripts go  here -->
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
