--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Objective</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">Start the career as a junior Javascript developer.</div>
+                    <div class="bordered col-xs-9 about-me-desc">Start the career as a front-end developer.</div>
                 </div>
 
                 <div class="row">
