--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                         <ul class="study-list">
                             <li>
-                                <p>I read a lot of specialized books and articles, here is a <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">link</a> to my bookshelf. My favorites are "Code Complete" and "Clean Coder".</p>
+                                <p>I read a lot of specialized books and articles, here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorites are "Code Complete" and "Clean Coder".</p>
                             </li>
                             <li>
                                 <p>learn the code of big projects on Github.</p>
