--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>API / Frameworks</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">jQuery, Bootstrap, Chrome APIs, (currently practicing AngularJS)</div>
+                    <div class="col-xs-5 col-sm-7 skill">jQuery, AngularJS, Bootstrap, Chrome APIs</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Experience with</span></div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Some experience with</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">С, mysql, apache, Wordpress, Opencart</div>
+                    <div class="col-xs-5 col-sm-7 skill">С, mySQL, Opencart, Wordpress</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
@@ -207,8 +207,12 @@
                 <hr>
 
                 <div class="row">
+                    <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/angular-vk-albums" target='_blank'>vk-albums</a></span></div>
+                    <div class="col-xs-9 proj-desc">Single page application for viewing user's photos from the vk.com social network. Framework: Angular 1.5.0</div>
+
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
-                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : styles SASS, CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
+                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
+
                 </div>
 
             </section>
