--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="row">
                 <div class="pdf-button">
-                    <a href="https://raw.githubusercontent.com/thohoh/thohoh.github.io/master/Kozlov_Alexander_cv.pdf" target='_blank' class="dl-button">Download as PDF</a>
+                    <a href="https://github.com/thohoh/thohoh.github.io/raw/master/Kozlov%20Alexander_cv.pdf" target='_blank' class="dl-button">Download as PDF</a>
                 </div>
             </div>
         </div>
