--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <p>Strong knowledge of Javascript. Understand principles and technics that used to create quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
+                        <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
                         <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies I worked with and my projects will be further.</p>
                         <p>Constantly evolving and learning, trying everything on practice. That's how I improve my knowledge :</p>
 
@@ -211,7 +211,7 @@
                     <div class="col-xs-9 proj-desc">Single page application for viewing user's photos from the vk.com social network. Framework: Angular 1.5.0</div>
 
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
-                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
+                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about a rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
 
                 </div>
 
