--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>API / Frameworks</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">jQuery, AngularJS, Bootstrap, Chrome APIs</div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS, jQuery, ExpressJS, Bootstrap, Chrome APIs</div>
+                </div>
+                <div class="row">
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">MongoDB</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
