--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <hr>
 
                 <div class="row">
-                    <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/angular-vk-albums" target='_blank'>vk-albums</a></span></div>
-                    <div class="col-xs-9 proj-desc">Single page application for viewing user's photos from the vk.com social network. Framework: Angular 1.5.0</div>
+<!--                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/angular-vk-albums" target='_blank'>vk-albums</a></span></div>
+                    <div class="col-xs-9 proj-desc">Single page application for viewing user's photos from the vk.com social network. Framework: Angular 1.5.0</div> -->
 
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
                     <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about a rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
