--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
                         <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
-                        <p>Have experience with node.js server-side model, was building simple long-polling/websocket chats. The list of technologies I worked with and my projects will be further.</p>
-                        <p>Constantly evolving and learning, trying everything on practice. That's how I improve my knowledge :</p>
-
-                        <ul class="study-list">
+                        <p>The list of technologies I worked with will be further. Constantly evolving and learning, trying everything on practice. Here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorite ones are "Code Complete" and "Clean Coder".
+                        </p>
+<!--                         <ul class="study-list">
                             <li>
                                 <p>I read a lot of specialized books and articles, here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorites are "Code Complete" and "Clean Coder".</p>
                             </li>
@@ -154,7 +153,7 @@
                                     also learn math on <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>
                                 </p>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </section>
