--- a/index.html
+++ b/index.html
@@ -138,22 +138,6 @@
                         <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
                         <p>The list of technologies I worked with will be further. Constantly evolving and learning, trying everything on practice. Here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorite ones are "Code Complete" and "Clean Coder".
                         </p>
-<!--                         <ul class="study-list">
-                            <li>
-                                <p>I read a lot of specialized books and articles, here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorites are "Code Complete" and "Clean Coder".</p>
-                            </li>
-                            <li>
-                                <p>learn the code of big projects on Github.</p>
-                            </li>
-                            <li>
-                                <p>study Computer Science courses from <a href="https://github.com/open-source-society/computer-science" target='_blank'>this list</a>.</p>
-                            </li>
-                            <li>
-                                <p>
-                                    also learn math on <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>
-                                </p>
-                            </li>
-                        </ul> -->
                     </div>
                 </div>
             </section>
@@ -175,8 +159,8 @@
                     <div class="col-xs-5 col-sm-7 skill">Jasmine, Mocha</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>API / Frameworks</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS, jQuery, ExpressJS, Bootstrap, Chrome APIs</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libraries</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS, jQuery, ExpressJS, Bootstrap</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
@@ -202,9 +186,6 @@
                 <hr>
 
                 <div class="row">
-<!--                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/angular-vk-albums" target='_blank'>vk-albums</a></span></div>
-                    <div class="col-xs-9 proj-desc">Single page application for viewing user's photos from the vk.com social network. Framework: Angular 1.5.0</div> -->
-
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
                     <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about a rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
 
