--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML, CSS(SASS)</div>
+                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML (Pug/Jade), CSS (Prepros: Sass, Less)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Unit-tests</span></div>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libraries</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS, jQuery, ExpressJS, Bootstrap</div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS, KnockoutJS, jQuery, ExpressJS, Bootstrap</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
@@ -168,11 +168,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">git, Gulp, Grunt, Webstorm, Photoshop</div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>OS</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Linux (advanced user)</div>
+                    <div class="col-xs-5 col-sm-7 skill">git, Gulp, Grunt, Photoshop</div>
                 </div>
             </section>
 
@@ -215,7 +211,7 @@
     </section> <!-- end resume -->
 
 
-    <!-- Scripts go  here -->
+    <!-- Scripts go here -->
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
