--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-4"><span>Adress:</span></div>
-                    <div class="col-xs-8">Russia. Crimea. Sevastopol (ready to move)</div>
+                    <div class="col-xs-8">Russia. Crimea. Simferopol (Open for remote job / ready to move)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-4"><span><span>Email:</span></span>
@@ -135,14 +135,34 @@
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate.</p>
-                        <p>The list of technologies I worked with will be further. Constantly evolving and learning, trying everything on practice. Here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorite ones are "Code Complete" and "Clean Coder".
+                        <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate. Constantly evolve, learn by doing.</p>
+                        <p>The list of technologies I worked with will be further. Here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorite ones are "Code Complete" and "Clean Coder".
                         </p>
                     </div>
                 </div>
             </section>
 
 
+
+            <!-- EXPERIENCE -->
+            <section class="resume-block about-me">
+                <h2>Experience</h2>
+                <hr>
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>Freelance / remote / part time</h5>
+                        <p>SPA, PSD to HTML, interfaces with complex logic, some node.js backend</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>jan 2016 - apr 2016</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>happy-giraffe.ru</h5>
+                        <p>Front-end developer</p>
+                    </div>
+                </div>
+            </section>
 
 
 
@@ -152,7 +172,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML (Pug/Jade), CSS (Prepros: Sass, Less)</div>
+                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML (Pug/Jade), CSS (Precompilers: Sass, Less)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Unit-tests</span></div>
@@ -161,6 +181,10 @@
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libraries</span></div>
                     <div class="col-xs-5 col-sm-7 skill">AngularJS, KnockoutJS, jQuery, ExpressJS, Bootstrap</div>
+                </div>
+                <div class="row">
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Dependency management</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">Browserify, RequireJS/AMD</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
