--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2>Personal data</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-4"><span>Adress:</span></div>
+                    <div class="text-right col-xs-4"><span>Address:</span></div>
                     <div class="col-xs-8">Russia. Crimea. Simferopol (Open for remote job / ready to move)</div>
                 </div>
                 <div class="row">
@@ -135,9 +135,19 @@
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <p>Strong knowledge of Javascript. Understand principles and technics required to create a quality software. Familiar with data structures and sorting algorithms. I'm trying to write a maintainable, modular and testable code, also practicing TDD approach in my projects where appropriate. Constantly evolve, learn by doing.</p>
-                        <p>The list of technologies I worked with will be further. Here is a <a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">link</a> to my bookshelf. My favorite ones are "Code Complete" and "Clean Coder".
-                        </p>
+                        <ul>
+                            <li>Good at javascript, know that thing really well.</li>
+                            <li>Familiar with data structures and algorithms</li>
+                            <li>Strong knowledge in AngularJS framework, experience in SPA development on MEAN stack.</li>
+                            <li>Experience in server-side development with nodejs platform.</li>
+                            <li>Working experience with complex UIs.</li>
+                            <li>Working experience with RESTful services.</li>
+                            <li>Working experience with Scrum methodology.</li>
+                            <li>Love to write tests.</li>
+                            <li>Modular and maintainable css.</li>
+                            <li>The desire for professional growth, not only in width but also in depth.</li>
+                        </ul>
+                        <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What I read ?</a></p>
                     </div>
                 </div>
             </section>
@@ -151,8 +161,8 @@
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <h5>Freelance / remote / part time</h5>
-                        <p>SPA, PSD to HTML, interfaces with complex logic, some node.js backend</p>
+                        <h5>Freelance / part time</h5>
+                        <p>SPAs, HTML markup, UI components</p>
                     </div>
                 </div>
                 <div class="row">
@@ -195,27 +205,6 @@
                     <div class="col-xs-5 col-sm-7 skill">git, Gulp, Grunt, Photoshop</div>
                 </div>
             </section>
-
-
-
-
-
-            <!-- CODE EXAMPLES -->
-<!--
-            <section class="resume-block">
-                <h2>Code examples</h2>
-                <hr>
-
-                <div class="row">
-                    <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
-                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about a rest in a smart way. Technologies used in the project : CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
-
-                </div>
-
-            </section>
--->
-
-
 
 
 
