--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-4"><span>Address:</span></div>
-                    <div class="col-xs-8">Russia. Crimea. Simferopol (Open for remote job / ready to move)</div>
+                    <div class="col-xs-8">Russia. Crimea. Simferopol</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-4"><span><span>Email:</span></span>
