--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
                         <ul>
-                            <li>Good at javascript, know that thing really well.</li>
+                            <li>Strong in javascript.</li>
                             <li>Familiar with data structures and algorithms</li>
-                            <li>Strong knowledge in AngularJS framework, experience in SPA development on MEAN stack.</li>
-                            <li>Experience in server-side development with nodejs platform.</li>
+                            <li>Decent experience with AngularJS framework.</li>
+                            <li>Experience in server-side development on nodejs.</li>
                             <li>Working experience with complex UIs.</li>
                             <li>Working experience with RESTful services.</li>
                             <li>Working experience with Scrum methodology.</li>
                             <li>Love to write tests.</li>
-                            <li>Modular and maintainable css.</li>
+                            <li>Write modular and maintainable css.</li>
                             <li>The desire for professional growth, not only in width but also in depth.</li>
                         </ul>
                         <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What I read ?</a></p>
@@ -172,6 +172,13 @@
                         <p>Front-end developer</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>may 2016 - present</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>isone.tech</h5>
+                        <p>Javascript developer on Angular2 + typescript</p>
+                    </div>
+                </div>
             </section>
 
 
@@ -182,19 +189,19 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML (Pug/Jade), CSS (Precompilers: Sass, Less)</div>
+                    <div class="col-xs-5 col-sm-7 skill">Javascript, Typescript, HTML (Pug/Jade), CSS (Precompilers: Sass, Less)</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Unit-tests</span></div>
                     <div class="col-xs-5 col-sm-7 skill">Jasmine, Mocha</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libraries</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS, KnockoutJS, jQuery, ExpressJS, Bootstrap</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libs</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2), KnockoutJS, jQuery, ExpressJS, socket.io, Bootstrap</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Dependency management</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Browserify, RequireJS/AMD</div>
+                    <div class="col-xs-5 col-sm-7 skill">SystemJS, Browserify, RequireJS</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
