--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kozlov Alexander | resume</title>
+    <title>Alexander Kozlov | Resume</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -79,10 +79,6 @@
                     <div class="col-xs-8"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-4"><span>Phone:</span></div>
-                    <div class="col-xs-8">+7 978 848 04 11</div>
-                </div>
-                <div class="row">
                     <div class="text-right col-xs-4"><span>Github:</span></div>
                     <div class="col-xs-8"><a target='_blank' href="https://github.com/thohoh">thohoh</a></div>
                 </div>
@@ -136,18 +132,15 @@
                     <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
                         <ul>
-                            <li>Strong in javascript.</li>
-                            <li>Familiar with data structures and algorithms</li>
-                            <li>Decent experience with AngularJS framework.</li>
-                            <li>Experience in server-side development on nodejs.</li>
-                            <li>Working experience with complex UIs.</li>
-                            <li>Working experience with RESTful services.</li>
-                            <li>Working experience with Scrum methodology.</li>
-                            <li>Love to write tests.</li>
-                            <li>Write modular and maintainable css.</li>
+                            <li>Strong in Javascript/Typescript.</li>
+                            <li>Focusing on complex javascript-heavy client apps.</li>
+                            <li>Decent experience with AngularJS and Angular 2(more often work on it).</li>
+                            <li>Experience in backend development on nodejs (Express).</li>
+                            <li>Know most of the 'good to know' computer science stuff.</li>
+                            <li>Tesing, must have.</li>
                             <li>The desire for professional growth, not only in width but also in depth.</li>
                         </ul>
-                        <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What I read ?</a></p>
+                        <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What do I read?</a></p>
                     </div>
                 </div>
             </section>
@@ -161,8 +154,7 @@
                 <div class="row">
                     <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
-                        <h5>Freelance / part time</h5>
-                        <p>SPAs, HTML markup, UI components</p>
+                        <h5>Freelance</h5>
                     </div>
                 </div>
                 <div class="row">
@@ -176,7 +168,7 @@
                     <div class="text-right col-xs-3 about-me-header"><span>apr 2016 - present</span></div>
                     <div class="bordered col-xs-9 about-me-desc">
                         <h5>isone.tech</h5>
-                        <p>Javascript developer on Angular2 + typescript</p>
+                        <p>Javascript developer (stack: Angular2, Typescript, Express, MongoDB, Redis)</p>
                     </div>
                 </div>
             </section>
@@ -189,15 +181,11 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Javascript, Typescript, HTML (Pug/Jade), CSS (Precompilers: Sass, Less)</div>
+                    <div class="col-xs-5 col-sm-7 skill">Javascript, Typescript, HTML , CSS</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libs</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2), KnockoutJS, jQuery, ExpressJS, socket.io, Bootstrap</div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Dependency management</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">SystemJS, Browserify, RequireJS</div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2), KnockoutJS,  Express, socket.io, Bootstrap, jQuery ... </div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
@@ -205,7 +193,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">git, Gulp, Grunt, Photoshop</div>
+                    <div class="col-xs-5 col-sm-7 skill">git, webstorm, vi ... </div>
                 </div>
             </section>
 
@@ -227,7 +215,6 @@
     </section> <!-- end resume -->
 
 
-    <!-- Scripts go here -->
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
